--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
                 تكلفة انشاء تطبيق متجر الكتروني أمر أصبح يؤرق جميع أصحاب المتاجر والأنشطة التجارية في السعودية ودول
                 الخليج والشرق الأوسط، فالجميع يريد تصميم متجر إلكتروني بجودة ممتازة وسعر ميسور، وتكم المشكلة في حيرة
                 أصحاب الشركات والمتاجر في التعاقد واختيار افضل شركة حيث يوجد العديد من الشركات وتنافس جميعها بتقديم عروض
-                مميزة وأسعار جيدة، وان كان هذا التنافس يبدو أمر جيد لأنه يخلق تنافس محموم إلا أن بعض الشركات تقوم بتقديم
-                عروض اقل سعراً وتقلل من الجودة مما ينتج عنه إنشاء تطبيق متجر الكتروني لا يحقق الهدف الذي تم إنشائه حيث
-                يفتقر إلي معايير الجودة، لا دعي للقلق سوف نستعرض في هذا المقال تكلفة انشاء تطبيق متجر الكتروني بجودة
-                متميزة وسعر مثالي.
+                مميزة وأسعار جيدة،
               </p>
               <a href="" class="btn">
                 شاهد المزيد
