change-header-to-header-slider

--- a/index.html
+++ b/index.html
@@ -16,24 +16,50 @@
 <body>
 
   <div class="header-slider">
-    <div class="header" style="background-image: url(./assets/images/header.png);">
-      <div class="container">
-        <div class="header-content">
-          <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-6">
-              <h5>تكلفة انشاء تطبيق متجر الكتروني </h5>
-              <p>
-                تكلفة انشاء تطبيق متجر الكتروني أمر أصبح يؤرق جميع أصحاب المتاجر والأنشطة التجارية في السعودية ودول
-                الخليج والشرق الأوسط، فالجميع يريد تصميم متجر إلكتروني بجودة ممتازة وسعر ميسور، وتكم المشكلة في حيرة
-                أصحاب الشركات والمتاجر في التعاقد واختيار افضل شركة حيث يوجد العديد من الشركات وتنافس جميعها بتقديم عروض
-                مميزة وأسعار جيدة،
-              </p>
-              <a href="" class="btn">
-                شاهد المزيد
-              </a>
+    <div class="owl-carousel" dir="ltr">
+      <div class="item header" style="background-image: url(./assets/images/header.png);">
+        <div class="container">
+          <div class="header-content">
+            <div class="row">
+              <div class="col-sm-12 col-md-12 col-lg-6">
+                <h5>تكلفة انشاء تطبيق متجر الكتروني </h5>
+                <p>
+                  تكلفة انشاء تطبيق متجر الكتروني أمر أصبح يؤرق جميع أصحاب المتاجر والأنشطة التجارية في السعودية ودول
+                  الخليج والشرق الأوسط، فالجميع يريد تصميم متجر إلكتروني بجودة ممتازة وسعر ميسور، وتكم المشكلة في حيرة
+                  أصحاب الشركات والمتاجر في التعاقد واختيار افضل شركة حيث يوجد العديد من الشركات وتنافس جميعها بتقديم
+                  عروض
+                  مميزة وأسعار جيدة،
+                </p>
+                <a href="" class="btn">
+                  شاهد المزيد
+                </a>
+              </div>
+              <div class="col-sm-12 col-md-12 col-lg-6">
+                <img src="./assets/images/header-img.png" alt="">
+              </div>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-6">
-              <img src="./assets/images/header-img.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="item header" style="background-image: url(./assets/images/header.png);">
+        <div class="container">
+          <div class="header-content">
+            <div class="row">
+              <div class="col-sm-12 col-md-12 col-lg-6">
+                <h5>تكلفة انشاء تطبيق متجر الكتروني </h5>
+                <p>
+                  وان كان هذا التنافس يبدو أمر جيد لأنه يخلق تنافس محموم إلا أن بعض الشركات تقوم بتقديم عروض اقل سعراً
+                  وتقلل من الجودة مما ينتج عنه إنشاء تطبيق متجر الكتروني لا يحقق الهدف الذي تم إنشائه حيث يفتقر إلي
+                  معايير الجودة، لا دعي للقلق سوف نستعرض في هذا المقال تكلفة انشاء تطبيق متجر الكتروني بجودة متميزة وسعر
+                  مثالي.
+                </p>
+                <a href="" class="btn">
+                  شاهد المزيد
+                </a>
+              </div>
+              <div class="col-sm-12 col-md-12 col-lg-6">
+                <img src="./assets/images/vector-163.png" alt="">
+              </div>
             </div>
           </div>
         </div>
